finalisation page d'acceuil

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <a href="#" class="neon-button">Neon1</a>
-    <a href="#" class="neon-button">Neon2</a>
-    <a href="#" class="neon-button">Neon3</a>
+    <h1 class="neon">Data analyser</h1>
+    <a href="#" class="neon-button">Import CSV</a>
+    <a href="#" class="neon-button">Show Graph</a>
   </body>
 </html>
