--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,7 @@
 /* css */
 
 :root {
-    --clr-neon: rgb(13, 139, 8);
+    --clr-neon: rgb(13, 139, 0);
     --clr-bg: black;
   }
   
@@ -18,7 +18,6 @@
     background: var(--clr-bg);
     font-family: "Balsamiq Sans", cursive;
     color: var(--clr-neon);
-    padding-top: 15vh;
   }
   
   .neon-button {
@@ -83,3 +82,9 @@
     opacity: 1;
   }
   
+  .neon{
+    font-size: 3rem;
+    display: inline-block;
+    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;  
+    position: relative;
+  }
