--- a/templates/Data_Analyser.html
+++ b/templates/Data_Analyser.html
@@ -6,8 +6,7 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1 class="neon">Data analyser</h1>
-    <a href="#" class="neon-button">Import CSV</a>
-    <a href="#" class="neon-button">Show Graph</a>
+    <h1 class="neon">Data Analyser</h1>
+    <a href="/templates/Import_CSV.html" class="neon-button">Import CSV</a>
   </body>
 </html>
