--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,6 @@
   
   .neon-button {
     font-size: 3rem;
-  
     display: inline-block;
     cursor: pointer;
     text-decoration: none;
@@ -30,11 +29,9 @@
     border: var(--clr-neon) 0.125em solid;
     padding: 0.25em 1em;
     border-radius: 0.25em;
-  
-    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
-  
+    margin: 1em;
+    text-shadow: 0 0 0.125em, 0 0 0.45em currentColor;
     box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
-  
     position: relative;
   }
   
@@ -47,7 +44,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-  
     transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
     filter: blur(1em);
     opacity: 0.7;
@@ -83,8 +79,22 @@
   }
   
   .neon{
-    font-size: 3rem;
+    font-size: 4rem;
     display: inline-block;
-    text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;  
+    text-shadow: 0 0 0.125em, 0 0 0.45em currentColor;  
+    position: relative;
+  }
+
+  .neon-input {
+    font-size: 2rem;
+    background-color: unset;
+    display: inline-block;
+    text-decoration: none;
+    color: var(--clr-neon);
+    border: var(--clr-neon) 0.125em solid;
+    padding: 0.25em 1em;
+    border-radius: 0.25em;
+    text-shadow: 0 0 0.125em, 0 0 0.45em currentColor;
+    box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
     position: relative;
   }
