--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1 class="neon">Import CSV as file :</h1>
+    <input type="file" class="neon-input">
     <h1 class="neon">Import CSV as link :</h1>
     <input class="neon-input">
     <table>
