import csv final change

--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1 class="neon">Import CSV as file :</h1>
-    <input type="file" class="neon-input">
+    <input type="file" id="select-file" class="neon-input-file">
+    <label for="select-file" class="neon-input-file-show">Select a file</label>
     <h1 class="neon">Import CSV as link :</h1>
     <input class="neon-input">
     <table>
@@ -16,7 +17,7 @@
                 <a href="/templates/Data_Analyser.html" class="neon-button">Return</a>
             </td>
             <td>
-                <a href="/templates/Import_CSV.html" class="neon-button">Import CSV</a>
+                <a href="/templates/Import_CSV.html" class="neon-button">Show Graph</a>
             </td>
         </th>
     </table>
