--- a/static/style.css
+++ b/static/style.css
@@ -98,3 +98,67 @@
     box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
     position: relative;
   }
+
+  .neon-input-file {
+    font-size: 1rem;
+    display: none;
+    cursor: pointer;
+  }
+
+  .neon-input-file-show {
+    font-size: 2rem;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--clr-neon);
+    border: var(--clr-neon) 0.125em solid;
+    padding: 0.25em 1em;
+    border-radius: 0.25em;
+    margin: 1em;
+    text-shadow: 0 0 0.125em, 0 0 0.45em currentColor;
+    box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
+    position: relative;
+  }
+
+  .neon-input-file-show::before {
+    pointer-events: none;
+    content: "";
+    position: absolute;
+    background: var(--clr-neon);
+    top: 110%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+    filter: blur(1em);
+    opacity: 0.7;
+  }
+  
+  .neon-input-file-show::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: 0 0 2em 0.5em var(--clr-neon);
+    opacity: 0;
+    background-color: var(--clr-neon);
+    z-index: -1;
+    transition: opacity 100ms linear;
+  }
+  
+  .neon-input-file-show:hover,
+  .neon-input-file-show:focus {
+    color: var(--clr-bg);
+    text-shadow: none;
+  }
+  
+  .neon-input-file-show:hover::before,
+  .neon-input-file-show:focus::before {
+    opacity: 1;
+  }
+  .neon-input-file-show:hover::after,
+  .neon-input-file-show:focus::after {
+    opacity: 1;
+  }
