--- a/templates/Data_Analyser.html
+++ b/templates/Data_Analyser.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1 class="neon">Data Analyser</h1>
-    <a href="/templates/Import_CSV.html" class="neon-button">Import CSV</a>
+    <a href="/templates/Import_CSV" class="neon-button">Import CSV</a>
   </body>
 </html>
