--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -14,10 +14,10 @@
     <table>
         <th>
             <td>
-                <a href="/templates/Data_Analyser" class="neon-button">Return</a>
+                <a href="/Data_Analyser" class="neon-button">Return</a>
             </td>
             <td>
-                <a href="/templates/Import_CSV" class="neon-button">Show Graph</a>
+                <a href="/Import_CSV" class="neon-button">Show Graph</a>
             </td>
         </th>
     </table>
