--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -14,7 +14,7 @@
     <table>
         <th>
             <td>
-                <a href="/Data_Analyser" class="neon-button">Return</a>
+                <a href="/" class="neon-button">Return</a>
             </td>
             <td>
                 <a href="/Import_CSV" class="neon-button">Show Graph</a>
