sélection de fichier, affichage upgraded

--- a/static/style.css
+++ b/static/style.css
@@ -85,6 +85,13 @@
     position: relative;
   }
 
+  .neon-sub{
+    font-size: 2rem;
+    display: inline-block;
+    text-shadow: 0 0 0.125em, 0 0 0.45em currentColor;  
+    position: relative;
+  }
+
   .neon-input {
     font-size: 2rem;
     background-color: unset;
@@ -94,7 +101,7 @@
     border: var(--clr-neon) 0.125em solid;
     padding: 0.25em 1em;
     border-radius: 0.25em;
-    text-shadow: 0 0 0.125em, 0 0 0.45em currentColor;
+    text-shadow: 0 0 0.125em, 0 0 0.100em currentColor;
     box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
     position: relative;
   }
