--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -9,6 +9,10 @@
     <h1 class="neon">Import CSV as file :</h1>
     <input type="file" id="select-file" class="neon-input-file">
     <label for="select-file" class="neon-input-file-show">Select a file</label>
+    <span>
+      <strong class="neon-sub">Chosen file:</strong>
+      <span class="neon-sub" id="file-name">None</span>
+    </span>
     <h1 class="neon">Import CSV as link :</h1>
     <input class="neon-input">
     <table>
@@ -21,6 +25,6 @@
             </td>
         </th>
     </table>
-
+    <script src="/static/script.js"></script>
   </body>
 </html>
