--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -24,7 +24,7 @@
         <h1 class="neon">Import CSV as link :</h1>
       </div>
       <div>
-        <input name="link" class="neon-input">
+        <input type="url" name="link" class="neon-input">
       </div>
       <div>
         <table>
