--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -6,7 +6,7 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <form method="POST" action="Show_Graph">
+    <form method="POST" action="Selection">
       <h1 class="neon">Import CSV as file :</h1>
       <div>
         <input type="file" id="select-file" class="neon-input-file">
@@ -34,7 +34,7 @@
                 </td>
                 <td>
                     <input id="Show-Graph" class="neon-input-file" type="submit">
-                    <label for="Show-Graph" class="neon-button">Show Graph</label>
+                    <label for="Show-Graph" class="neon-button">Selection</label>
                 </td>
             </th>
         </table>
