--- a/templates/Show_Graph.html
+++ b/templates/Show_Graph.html
@@ -7,6 +7,6 @@
   </head>
   <body>
       <p class="neon">{{data}}</p>
-    <a href="/" class="neon-button">home</a>
+    <a href="/Selection" class="neon-button">home</a>
   </body>
 </html>
