--- a/templates/Error_Page.html
+++ b/templates/Error_Page.html
@@ -6,7 +6,7 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-      <p class="neon">{{data}}</p>
-    <a href="/Selection" class="neon-button">Retour à la selection</a>
+    <h1 class="neon">Erreur : </h1>
+    <p class="neon">{{error}}</p>    
   </body>
 </html>
