--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -17,7 +17,7 @@
       <div>
         <span>
           <strong class="neon-sub">Chosen file:</strong>
-          <span class="neon-sub" id="file-name">None</span>
+          <span class="neon-sub" id="file-name-display">None</span>
         </span>
       </div>
       <div>
