--- a/templates/ChartPage.html
+++ b/templates/ChartPage.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>CodePen - Morris.js charts - simple examples</title>
-		<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-		<link rel='stylesheet' href='https://cdn.oesmith.co.uk/morris-0.5.1.css'><link rel="stylesheet" href="static/chartStyle.css">
+		<link rel='stylesheet' href='static/chartStyle.css'>
+		<link rel="stylesheet" href="static/chartStyle.css">
 		<meta charset=utf-8 />
 		<title>Morris.js Area Chart</title>
 	</head>
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 	</body>
-	<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.0/morris.min.js'></script><script  src="static/chartScript.js"></script>
+	<script src='static/jquery.min.js'></script>
+	<script src='static/min.js'></script>
+	<script src='static/morrisMin.js'></script><script  src="static/chartScript.js"></script>
 </html>
