--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -9,7 +9,7 @@
     <form method="POST" action="Selection">
       <h1 class="neon">Import CSV as link :</h1>
       <div>
-        <input type="url" name="link" class="neon-input">
+        <input type="url" name="link" class="neon-input" value="https://www.data.gouv.fr/fr/datasets/r/7a2ad28a-0e2a-4c69-84f0-c703448b60f9">
       </div>
       <div>
         <table>
