--- a/templates/Selection.html
+++ b/templates/Selection.html
@@ -20,16 +20,15 @@
     <div class="titlesButton">
       <h1 class="neon">Filters</h1>
       <form method="POST" action="Show_Graph">
-        {% for i in Filters %}
-        <div class="dropdown mt-2">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-            {{i}}
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        {% for i in range (0,filtersLen) %}
+        <div id="{{Filters[i]}}">
+          <label for="{{Filters[i]}}">{{Filters[i]}}: </label>
+          <select name="{{Filters[i]}}" id="{{Filters[i]}}">
+            <option value="">--</option>
+            {% for x in FiltersValues[i] %}
+            <option value="{{x}}">{{x}}</option>
+            {% endfor %}
+          </select>
         </div>
         {% endfor %}
       </form>
