--- a/templates/Show_Graph.html
+++ b/templates/Show_Graph.html
@@ -6,7 +6,7 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-      <p class="neon">{{data}}</p>
+      <p class="neon">{{resultat}}</p>
     <a href="/Selection" class="neon-button">Retour à la selection</a>
   </body>
 </html>
