--- a/templates/ChartPage.html
+++ b/templates/ChartPage.html
@@ -11,7 +11,7 @@
 	<body>
 		<h3 class="text-primary text-center">Morris js charts</h3>
 		<div class="row">
-			<div class="col-sm-6 text-center">
+			<!-- <div class="col-sm-6 text-center">
 				<label class="label label-success">Area Chart</label>
 				<div id="area-chart" ></div>
 			</div>
@@ -26,7 +26,7 @@
 			<div class="col-sm-6 text-center">
 				<label class="label label-success">Bar stacked</label>
 				<div id="stacked" ></div>
-			</div>
+			</div> -->
 			<div class="col-sm-6 col-sm-offset-3 text-center">
 				<label class="label label-success">Pie Chart</label>
 				<div id="pie-chart" ></div>
