--- a/templates/Show_Graph.html
+++ b/templates/Show_Graph.html
@@ -3,10 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdn.oesmith.co.uk/morris-0.5.1.css'>
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+      <div class="col-sm-6 col-sm-offset-3 text-center">
+        <label class="label label-success">Pie Chart</label>
+      <div id="pie-chart" ></div>
       <p class="neon">{{resultat}}</p>
     <a href="/Selection" class="neon-button">Retour à la selection</a>
   </body>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.0/morris.min.js'></script>
+  <script type="text/javascript">
+    Morris.Donut({
+    element: 'pie-chart',
+    data:[
+      {% for key, value in resultat.items() %}
+      {label: '{{key}}', value: {{value}}},
+      {% endfor %}
+    ]
+    });
+  </script>
 </html>
