--- a/templates/Show_Graph.html
+++ b/templates/Show_Graph.html
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdn.oesmith.co.uk/morris-0.5.1.css'>
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&amp;display=swap" rel="stylesheet">
   </head>
   <body>
       <div class="col-sm-6 col-sm-offset-3 text-center">
