--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <form method="POST" action="Selection">
-      <h1 class="neon">Import CSV as link :</h1>
+      <h1>Import CSV as link :</h1>
       <div>
-        <input type="url" name="link" class="neon-input" value="https://www.data.gouv.fr/fr/datasets/r/7a2ad28a-0e2a-4c69-84f0-c703448b60f9">
+        <input type="url" name="link" class="input" value="https://www.data.gouv.fr/fr/datasets/r/7a2ad28a-0e2a-4c69-84f0-c703448b60f9">
       </div>
       <div>
         <table>
             <th>
                 <td>
-                    <a href="/" class="neon-button">Return</a>
+                    <a href="/" class="button">Return</a>
                 </td>
                 <td>
-                    <input id="Show-Graph" class="neon-input-file" type="submit">
-                    <label for="Show-Graph" class="neon-button">Selection</label>
+                    <input id="Show-Graph" class="hide-input" type="submit">
+                    <label for="Show-Graph" class="button">Selection</label>
                 </td>
             </th>
         </table>
