--- a/templates/Data_Analyser.html
+++ b/templates/Data_Analyser.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1 class="neon">Data Analyser</h1>
-    <a href="/Import_CSV" class="neon-button">Import CSV</a>
+    <a href="/Import_CSV" class="button">Import CSV</a>
   </body>
 </html>
