--- a/templates/Show_Graph.html
+++ b/templates/Show_Graph.html
@@ -13,8 +13,8 @@
       <div class="col-sm-6 col-sm-offset-3 text-center">
         <label class="label label-success">Pie Chart</label>
       <div id="pie-chart" ></div>
-      <p class="neon">{{resultat}}</p>
-    <a href="/Selection" class="neon-button">Retour à la selection</a>
+      <p>{{resultat}}</p>
+    <a href="/Selection" class="button">Retour à la selection</a>
   </body>
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js'></script>
