c viktor sur le pc a natan

--- a/templates/Data_Analyser.html
+++ b/templates/Data_Analyser.html
@@ -6,9 +6,12 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&amp;display=swap" rel="stylesheet">
+    <title>StudentsTracker</title>
   </head>
   <body>
-    <h1 class="neon">Data Analyser</h1>
-    <a href="/Import_CSV" class="button">Import CSV</a>
+    <div class="center">
+      <h1>StudentsTracker</h1>
+      <a href="/Import_CSV" class="button">Importer un fichier CSV</a>
+    </div>
   </body>
 </html>
