--- a/templates/Show_Graph.html
+++ b/templates/Show_Graph.html
@@ -8,6 +8,7 @@
     <link href="/static/style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&amp;display=swap" rel="stylesheet">
+    <title>Students tracker</title>
   </head>
   <body>
       <div class="col-sm-6 col-sm-offset-3 text-center">
