tentative résolution + correction faute

--- a/templates/Selection.html
+++ b/templates/Selection.html
@@ -30,7 +30,7 @@
           <label for="Column_{{x}}">{{x}}</label>
         </div>
         {% endfor %}
-        <input class="button" type="submit" value="Afficher le graphrique">
+        <input class="button" type="submit" value="Afficher le graphique">
       </form>
     </div>
   </body>
