--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -30,4 +30,9 @@
     </form>
     <script src="/static/script.js"></script>
   </body>
+  <script>
+    function disableAfterClick() {
+      document.getElementById("Show-Graph").disabled = true;
+    }
+  </script>
 </html>
