--- a/templates/Import_CSV.html
+++ b/templates/Import_CSV.html
@@ -22,7 +22,7 @@
                 </td>
                 <td>
                     <input id="Show-Graph" class="hide-input" type="submit">
-                    <label for="Show-Graph" class="button">Selection</label>
+                    <label for="Show-Graph" class="button">Sélection</label>
                 </td>
             </th>
         </table>
