--- a/static/style.css
+++ b/static/style.css
@@ -72,3 +72,13 @@ table{
 .csv-center{
   margin-top: 15%;
 }
+
+.table-left{
+  text-align: left;
+  vertical-align: top;
+}
+
+.table-right{
+  text-align: right;
+  vertical-align: top;
+}
