--- a/templates/Data_Analyser.html
+++ b/templates/Data_Analyser.html
@@ -9,8 +9,8 @@
     <title>StudentsTracker</title>
   </head>
   <body>
-    <div class="center">
-      <h1>StudentsTracker</h1>
+    <img class="img center" src="{{ url_for('static', filename='images/favicon.png' ) }}">
+    <div>
       <a href="/Import_CSV" class="button">Importer un fichier CSV</a>
     </div>
   </body>
