--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,7 @@ table{
 }
 
 .center{
-  margin-top: 20%;
+  margin-top: 10%;
 }
 
 .csv-center{
@@ -81,4 +81,9 @@ table{
 .table-right{
   text-align: right;
   vertical-align: top;
+}
+
+.img{
+  width: 20rem;
+  height: 20rem;
 }
